@@ -1,3 +1,8 @@
+2014-03-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am, configure.ac: Use Cygwin system getopt().
+	* getopt.h: Avoid to redeclare the getopt API.
+
 2014-02-08  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* knj.[ch]: Add a new function win32_putc().
